<resources>
    <string name="app_name">Triplover</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_login">Login/Register</string>
    <string name="menu_booking">My Booking</string>
    <string name="menu_about">About Us</string>
    <string name="menu_contact">Contact Us</string>

    <string name="menu_flight">Flight</string>
    <string name="menu_hotel">Hotel</string>
    <string name="menu_tour">Tours</string>
    <string name="menu_logins">Login</string>
    <string name="signup_terms_condition">By creating this account you are agree to our <b><u>Terms &amp; Conditions</u></b></string>
    <string name="terms_condition"><b><u>Terms &amp; Conditions</u></b></string>
    <string name="login_u"><b><u>Login</u></b></string>
    <string name="login_u_details">If you have an account, <b><u><font fgcolor='#F16B2E'>Please Login</font></u></b>, or continue as a guest</string>

    <string name="flight_details"><u>Flight Details</u></string>
    <string name="flight_detail">Flight Details</string>
    <string name="create_acc_u"><b><u>Create New</u></b></string>
    <string name="title_activity_flight_search">FlightSearchActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="flightsearch_fragment_label">First Fragment</string>
    <string name="flightlist_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="search_flight">Search Flight</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="date_select">Select Date</string>
    <string name="adult">Adult(12+)</string>
    <string name="book">Book</string>
    <string name="child_req">Child (2-12)</string>
    <string name="infant_req">Infant (0-2)</string>
    <string name="select">Select</string>
    <string name="confirm">Confirm</string>
    <string name="flight_found">Flight/s found</string>
    <string name="back">Back</string>
    <string name="remove">Remove</string>
    <string name="filter">Filter</string>
    <string name="sortby">Sort By</string>
    <string name="no_flight">No Flight Found</string>
    <string name="no_flight_msg">Sorry, No Flight Found...</string>
    <string name="search_again">Search Again</string>
    <string name="close">Close</string>
    <string name="invalid">Invalid</string>
    <string name="password_not_match">Password didn\'t match.</string>
    <string name="loginFailed">Sorry, Login failed. Try again.</string>
    <string name="nothing_show">Nothing to show</string>
    <string name="title">Title</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="dob">Date of Birth</string>
    <string name="nationality">Nationality</string>
    <string name="doc_type">Document Type</string>
    <string name="doc_number">Document Number*</string>
    <string name="issuedin">Issued In</string>
    <string name="expiry">Expires No*</string>
    <string name="book_continue">Book and Continue</string>
    <string name="passenger_details">Passenger Details</string>
    <string name="gender">Gender</string>
    <string name="contact">Contact</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="phone_contrycode">Phone Code</string>
    <string name="country_code">Country Code</string>
    <string name="city_name">City Name</string>
    <string name="done">Done</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="went_wrong">Something went wrong, Please try again...</string>
    <string name="comming_soon">This feature is comming soon...</string>
    <string name="booking_ref">Booking Reference:</string>
    <string name="issue_date">Issue Date:</string>
    <string name="no_data">No Data Found</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_inbox">Inbox</string>
    <string name="menu_offer">Offer</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_msg">Let\'s continue your journey</string>
    <string name="create_acc">Create Account!</string>
    <string name="round_trip_msg">Save more on return</string>
    <string name="click_to_change">Click to change</string>
    <string name="signup_conditions">\u25CF&#160;Password must be 8 characters\n\u25CF&#160;Password must have 1 upper case(AB) &amp; lower case letter (ab)\n\u25CF&#160;Password must have one number</string>
    <string name="baggage_det">Bag Details</string>
    <string name="price_det">Price Details</string>
    <string name="cancel">Cancel</string>
    <string name="thanks">Thanks</string>
    <string name="exit">Exit</string>
    <string name="exit_msg">Are you sure want to EXIT!</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="menu_visa">Visa</string>
    <string name="select_flight">Please, Select a flight. No Flight is selected.</string>
    <string name="failed">Failed</string>
    <string name="hide">Hide</string>
    <string-array name="spinnerItems">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="gender">
        <item>Male-MR</item>
        <item>Female-MRS</item>
        <item>Female-MISS</item>
    </string-array>
    <string-array name="gender_child">
        <item>Male-MSTR</item>
        <item>Female-MSTRS</item>
    </string-array>
    <string-array name="gender_inf">
        <item>Male-MR</item>
        <item>Female-MS</item>
    </string-array>
    <string-array name="passenger_title">
        <item>MR</item>
        <item>MRS</item>
    </string-array>
    <string-array name="doc_type">
        <item>Passport</item>
    </string-array>
</resources>