<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_flight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableTop="@drawable/flight_departing_icon"
                    android:drawableTint="@color/white"
                    android:padding="@dimen/_15sdp"
                    android:text="@string/menu_flight"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_hotel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableTop="@drawable/ic_hotel"
                    android:drawableTint="@color/white"
                    android:padding="@dimen/_15sdp"
                    android:text="@string/menu_hotel"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_tour"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableTop="@drawable/ic_tour"
                    android:drawableTint="@color/white"
                    android:padding="@dimen/_15sdp"
                    android:text="@string/menu_tour"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/home_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <Button

                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableTop="@drawable/ic_baseline_lock_24"
                    android:drawableTint="@color/white"
                    android:padding="@dimen/_15sdp"
                    android:text="@string/menu_logins"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>