<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/tab_bar"
        android:theme="@style/Theme.TripLover.AppBarOverlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:popupTheme="@style/Theme.TripLover.PopupOverlay" />

            <TextView
                android:id="@+id/flights_next"
                style="@style/TTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_5sdp"
                android:drawableRight="@drawable/ic_baseline_navigate_next_24"
                android:gravity="center"
                android:paddingLeft="@dimen/_5sdp"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:tint="@color/white"
                android:visibility="gone" />
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/flight_selected_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/flight_select_bottom"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/_5sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/flight_selected_list"
            android:layout_marginLeft="@dimen/_3sdp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/flight_total_found"
                style="@style/TTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:gravity="right"
                android:text="@string/no_flight"
                android:textColor="@color/green"
                android:textSize="@dimen/_12sdp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/flight_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/flight_select_bottom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp">

            <LinearLayout
                android:id="@+id/filter"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/round_border"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/TTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_baseline_filter_list_24"
                    android:drawablePadding="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="@string/filter"
                    android:textColor="@color/orange" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sortby"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/round_border"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/TTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_baseline_filter_list_24"
                    android:drawablePadding="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="@string/sortby"
                    android:textColor="@color/orange" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
