<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    android:fitsSystemWindows="true"
    tools:context=".acitivies.PassengerEntryActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/transparent"
        android:elevation="0dp"
        android:theme="@style/Theme.TripLover.AppBarOverlay"
        app:elevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:popupTheme="@style/Theme.TripLover.PopupOverlay" />

            <TextView
                android:id="@+id/flights_next"
                style="@style/TTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_5sdp"
                android:drawableRight="@drawable/ic_baseline_navigate_next_24"
                android:gravity="center"
                android:paddingLeft="@dimen/_5sdp"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:tint="@color/white"
                android:visibility="gone" />
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/pass_top_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginBottom="@dimen/_3sdp"
            android:orientation="horizontal"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/pas_login"
                    style="@style/TTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/login_u_details"
                    android:textColor="@color/black_main"
                    android:textSize="@dimen/_11sdp" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/entry_bottom"
            android:gravity="center">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/passenger_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/entry_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/book_continue"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/pas_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="I agree to the"
                android:textColor="@color/black_main"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/book_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text="@string/terms_condition"
                android:textColor="@color/black_main"
                android:textSize="@dimen/_10sdp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/book_continue"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/button_blue"
            android:padding="5dp"
            android:text="@string/book_continue"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>